--- a/segmenter/models/segmenter.ipynb
+++ b/segmenter/models/segmenter.ipynb
@@ -58,10 +58,10 @@
    "source": [
     "\n",
     "# INFO_TAG = \"persuasive_essays_paragraph\"\n",
-    "# INFO_TAG = \"persuasive_essays_paragraph_all_linked\"\n",
+    "INFO_TAG = \"persuasive_essays_paragraph_all_linked\"\n",
     "# INFO_TAG = \"cdcp\"\n",
     "# INFO_TAG = \"drinventor\"\n",
-    "INFO_TAG = \"abstrct\"\n",
+    "# INFO_TAG = \"abstrct\"\n",
     "\n",
     "\n",
     "# LANGUAGE = \"english\"\n",
@@ -95,7 +95,6 @@
     "    'batch_size': 20,\n",
     "    'lstm_size': 200,\n",
     "    'optimizer': 'adam',\n",
-    "#     'metrics': ['acc'], # Problems with the boolean mask\n",
     "    'trainable_word_emeddings': False,\n",
     "    'regularization': \"l2\",\n",
     "    \n",
@@ -445,66 +444,6 @@
     "    np.savez_compressed(params[\"glove_path\"], embeddings=embedding_matrix)\n",
     "    \n",
     "add_embeddings(params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "class SequenceMetric(keras.metrics.Metric):\n",
-    "    def __init__(self, metric, is_one_hot_encoded=False, **kwargs):\n",
-    "        super(keras.metrics.Metric, self).__init__(name=f\"sequence_{metric.name}\", **kwargs)\n",
-    "        self.metric = metric\n",
-    "        self.is_one_hot_encoded = is_one_hot_encoded\n",
-    "\n",
-    "        \n",
-    "    def update_state(self, y_true, y_pred, sample_weight=None):\n",
-    "        shape = tf.shape(y_true)\n",
-    "        flat = tf.foldl(lambda x,y: x*y, shape)\n",
-    "        \n",
-    "        if self.is_one_hot_encoded:\n",
-    "            flat /= shape[-1]\n",
-    "            shape = (tf.cast(flat, tf.int32), tf.cast(shape[-1], tf.int32))\n",
-    "        else:\n",
-    "            shape = (tf.cast(flat, tf.int32),)\n",
-    "        \n",
-    "        y_true = tf.reshape(y_true, shape)\n",
-    "        y_pred = tf.reshape(y_pred, shape)\n",
-    "        \n",
-    "        if self.is_one_hot_encoded:\n",
-    "            y_true = tf.argmax(y_true, axis=1)\n",
-    "            y_pred = tf.argmax(y_pred, axis=1)\n",
-    "        \n",
-    "        if sample_weight is not None:\n",
-    "            print(sample_weight)\n",
-    "            print(tf.shape(sample_weight))\n",
-    "            mask_shape = tf.shape(sample_weight)\n",
-    "            mask_flat = tf.foldl(lambda x,y: x*y, mask_shape)\n",
-    "            mask_shape = (tf.cast(mask_flat, tf.int32), )\n",
-    "            sample_weight = tf.reshape(sample_weight, mask_shape)\n",
-    "            print(sample_weight)\n",
-    "            print(tf.shape(sample_weight))\n",
-    "            print(y_true)\n",
-    "            print(tf.shape(y_true))\n",
-    "            y_true = tf.boolean_mask(y_true, sample_weight)\n",
-    "            y_pred = tf.boolean_mask(y_pred, sample_weight)\n",
-    "            print(y_true)\n",
-    "            print(tf.shape(y_true))\n",
-    "        \n",
-    "        self.metric.update_state(y_true, y_pred, sample_weight=sample_weight)\n",
-    "\n",
-    "    def reset_state(self):\n",
-    "        self.metric.reset_states()\n",
-    "        \n",
-    "    def result(self):\n",
-    "        return self.metric.result()\n",
-    "\n",
-    "class SequenceAccuracy(SequenceMetric):\n",
-    "    def __init__(self, **kwargs):\n",
-    "        super(SequenceAccuracy, self).__init__(tf.keras.metrics.Accuracy(), **kwargs)\n"
    ]
   },
   {
@@ -976,7 +915,6 @@
     "def load_saved_model(params: dict, path_key: str, param_save_key: str):\n",
     "    model = keras.models.load_model(params[path_key])\n",
     "    params[param_save_key] = model\n",
-    "    \n",
     "    \n",
     "load_saved_model(params, 'model_path', params['model_name'])"
    ]
@@ -1513,16 +1451,26 @@
     "\n",
     "    fig, ax = plt.subplots()\n",
     "    rects = []\n",
-    "    \n",
+    "\n",
     "    for i, label in enumerate(values):\n",
     "        values_values = values[label]\n",
     "        diff = width / len(values) \n",
+    "        label = label.replace(\"mean\", \"promedio\")\n",
+    "        label = label.replace(\"source\", \"origen\")\n",
+    "        label = label.replace(\"target\", \"objetivo\")\n",
+    "        label = label.replace(\"relations\", \"relaciones\")\n",
+    "        label = label.replace(\"relation\", \"relación\")\n",
+    "        label = label.replace(\"loss\", \"pérdida\")\n",
+    "        label = label.replace(\"linked\", \"enlazado\")\n",
+    "        label = label.replace(\"_\", \" \")\n",
     "        rect = ax.bar(x + diff * i, [round(x,2) for x in values_values], diff, label=label)\n",
     "        rects.append(rect)\n",
     "    \n",
     "    # Add some text for labels, title and custom x-axis tick labels, etc.\n",
-    "    ax.set_ylabel('Values')\n",
-    "    ax.set_title('Metrics per Model')\n",
+    "#     ax.set_ylabel('Values')\n",
+    "    ax.set_ylabel('Valor')\n",
+    "#     ax.set_title('Metrics per Model')\n",
+    "    ax.set_title('Métricas por modelos')\n",
     "    ax.set_xticks(x, labels, rotation=0)\n",
     "    ax.legend(loc=\"lower left\")\n",
     "\n",
@@ -1545,15 +1493,24 @@
     "    tags = sorted([x.strip() for x in tags_path.open().readlines()])\n",
     "    bioes_tags = sorted(set(tag[0] for tag in tags))\n",
     "    \n",
-    "    def plot_history(history, model_name):\n",
-    "\n",
-    "        plt.plot(history['crf_loss'], label=f'loss train {model_name}')\n",
-    "        plt.plot(history['val_crf_loss'], label=f'loss val {model_name}')\n",
+    "    def plot_history(history, model_name): \n",
+    "        label = f'loss train {model_name}'\n",
+    "        label = label.replace(\"loss\", \"pérdida\")\n",
+    "        label = label.replace(\"train\", \"entrenamiento\")\n",
+    "        plt.plot(history['crf_loss'], label=label)\n",
+    "    \n",
+    "        label = f'loss val {model_name}'\n",
+    "        label = label.replace(\"loss\", \"pérdida\")\n",
+    "        label = label.replace(\"val\",  \"validación\")\n",
+    "        plt.plot(history['val_crf_loss'], label=label)\n",
     "\n",
     "    def show_plot():\n",
-    "        plt.title(\"All models\")\n",
-    "        plt.ylabel('Cross entropy value')\n",
-    "        plt.xlabel('No. epoch')\n",
+    "#         plt.title(\"All models\")\n",
+    "        plt.title(\"Todos los modelos\")\n",
+    "#         plt.ylabel('Cross entropy value')\n",
+    "        plt.ylabel('Entropía cruzada')\n",
+    "#         plt.xlabel('No. epoch')\n",
+    "        plt.xlabel('No. de época')\n",
     "#         plt.legend(loc=\"upper right\")\n",
     "        plt.legend()\n",
     "        plt.savefig(base_path / \"crf_loss.png\")\n",
@@ -1592,17 +1549,21 @@
     "    name_map = {}\n",
     "    \n",
     "    for model_path in base_path.iterdir():\n",
+    "        if model_path.name[0] == \"_\": continue\n",
     "        if model_path.is_dir():\n",
     "            model_name = model_path.name\n",
     "            statistic_df[\"model_name\"].append(model_name)\n",
     "            smaller_name = \"\".join([x[0] for x in model_name.split(\"_\")])\n",
+    "#             smaller_name = f\"model{len(name_map)+1}\"\n",
+    "            smaller_name = f\"modelo {len(name_map)+1}\"\n",
     "            name_map[model_name] = smaller_name\n",
     "            \n",
     "            history_path = model_path / f\"history.json\"\n",
     "            if history_path.exists():\n",
-    "                print(f\"WARNING: History for {model_name} not found\" )\n",
     "                history = json.load(history_path.open())\n",
     "                plot_history(history, smaller_name)\n",
+    "            else:\n",
+    "                print(f\"WARNING: History for {history_path} not found\" )\n",
     "            \n",
     "            statistic = model_path / \"statistic.json\"\n",
     "            statistic = json.load(statistic.open())\n",
@@ -1619,8 +1580,12 @@
     "                tags.remove(tag)\n",
     "            \n",
     "            evaluation_path = model_path / \"evaluation.json\"\n",
-    "            evaluation = json.load(evaluation_path.open())\n",
-    "            statistic_df[\"evaluation_crf_loss\"].append(evaluation['crf_loss'])\n",
+    "            if evaluation_path.exists():\n",
+    "                evaluation = json.load(evaluation_path.open())\n",
+    "                statistic_df[\"evaluation_crf_loss\"].append(evaluation['crf_loss'])\n",
+    "            else:\n",
+    "                print(f\"WARNING: Evaluation {evaluation_path} doesn't exist\")\n",
+    "                statistic_df[\"evaluation_crf_loss\"].append(0)\n",
     "            \n",
     "            statistic_df[\"macro_f1\"].append(statistic[\"all_report\"][\"macro avg\"][\"f1-score\"])\n",
     "            statistic_df[\"wheight_f1\"].append(statistic[\"all_report\"][\"weighted avg\"][\"f1-score\"])\n",
@@ -1821,21 +1786,12 @@
    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.6.9 64-bit",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": ""
   }
  },
  "nbformat": 4,
