--- a/link_prediction/models/link_prediction.ipynb
+++ b/link_prediction/models/link_prediction.ipynb
@@ -1990,7 +1990,7 @@
     "        if linked:\n",
     "            if predicted_relation_tag == \"\" or predicted_relation_tag.endswith(\"_Inverse\"):\n",
     "                print(\"WARNING: Linked prediction with invalid relation tag. Ignoring relation.\")\n",
-    "            else predicted_relation_tag:\n",
+    "            elif predicted_relation_tag:\n",
     "                predictions[source_id, target_id] = predicted_relation_tag, predicted_source_tag, predicted_target_tag\n",
     "#     # Remove inverse relations. If the forward relation doesn't exist then\n",
     "#     # it will be added in either case the inverse relation will be removed.\n",
