--- a/segmenter/models/segmenter.ipynb
+++ b/segmenter/models/segmenter.ipynb
@@ -218,8 +218,9 @@
     "# Prepare model corpus\n",
     "from segmenter.models.segmenter_exporter import export_directory, export_files\n",
     "\n",
-    "def create_segmenter_corpus(params: dict):\n",
+    "def create_segmenter_corpus(params: dict, force=False):\n",
     "    corpus_type = params['corpus_type']\n",
+    "    if not force and Path(params['sequences_path'][0]).exists(): return\n",
     "    if corpus_type == \"paragraph\":\n",
     "        export_directory(Path(params['source_data_path']), \n",
     "                         Path(params['data_path']), \n",
