--- a/link_prediction/models/link_prediction.ipynb
+++ b/link_prediction/models/link_prediction.ipynb
@@ -508,7 +508,7 @@
    "outputs": [],
    "source": [
     "# Encode Dataset\n",
-    "\n",
+    "@tf.function\n",
     "def encode_distance(distance, encode_size):\n",
     "    \"\"\"\n",
     "    return: Tensor with the encoded distance\n",
