--- a/segmenter/models/segmenter.ipynb
+++ b/segmenter/models/segmenter.ipynb
@@ -854,6 +854,8 @@
     "                  callbacks=callbacks,\n",
     "                  validation_data=val_ds)\n",
     "\n",
+    "    Path(params['model_histories_path']).mkdir(exist_ok=True, parents=True)\n",
+    "\n",
     "    with Path(params['model_histories_path'], f\"history.json\").open('w') as f:\n",
     "        json.dump(history.history, f)\n",
     "    model.save(params[\"model_path\"], save_format='tf')\n",
