--- a/ArgumentMiningColab.ipynb
+++ b/ArgumentMiningColab.ipynb
@@ -30,7 +30,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Mao_0C_WPWHi",
-        "outputId": "57cd8eb4-7467-4bec-ff86-2cee1ac8f0a5"
+        "outputId": "d360c44d-983d-4cc4-a912-c44e92d231e7"
       },
       "outputs": [],
       "source": [
@@ -48,7 +48,11 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Ok68HQqzjlme"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ok68HQqzjlme",
+        "outputId": "db2713d4-f9bd-4a90-d552-eb8e5d32ccc8"
       },
       "outputs": [],
       "source": [
@@ -82,7 +86,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "65wHhxUn56nm",
-        "outputId": "786c2107-1648-4bb8-aa81-560a540ff69a"
+        "outputId": "eb394a6b-ac66-4fd2-c2a4-0536ed451124"
       },
       "outputs": [],
       "source": [
@@ -128,11 +132,11 @@
         "link_predictor_saved_path = Path(link_predictor_saved_path, corpus)\n",
         "\n",
         "#@markdown Segmenter path\n",
-        "segmenter_to_save_path = \"/content/drive/MyDrive/argument-mining/segmenter\" #@param {type:\"string\"}\n",
+        "segmenter_to_save_path = \"/content/segmenter\" #@param {type:\"string\"}\n",
         "segmenter_to_save_path = Path(segmenter_to_save_path, corpus)\n",
         "\n",
         "#@markdown Link Predictor path\n",
-        "link_predictor_to_save_path = \"/content/drive/MyDrive/argument-mining/link_prediction\" #@param {type:\"string\"}\n",
+        "link_predictor_to_save_path = \"/content/link_prediction\" #@param {type:\"string\"}\n",
         "link_predictor_to_save_path = Path(link_predictor_to_save_path, corpus)\n",
         "\n",
         "if segmenter_saved_path.exists():\n",
@@ -160,7 +164,9 @@
       "source": [
         "# Corpus Projection\n",
         "\n",
-        "This section will create the corpus in the target language by projecting the labels from the corpus in the source language. Can be skipped if abstrct, cdcp or persuasive_essays_paragraph_all_linked were selected, or if you already have the projections in the folder /content/argument-mining/data/projection/$corpus_name."
+        "This section will create the corpus in the target language by projecting the labels from the corpus in the source language. Can be skipped if abstrct, cdcp or persuasive_essays_paragraph_all_linked were selected, or if you already have the projections in the folder /content/argument-mining/data/projection/$corpus_name.\n",
+        "\n",
+        "A corpus can be added to the /content/argument-mining/data/corpus/$corpus_name with train, dev and test subfolders."
       ]
     },
     {
@@ -264,7 +270,9 @@
       "source": [
         "# Extract Argumentative Structures\n",
         "\n",
-        "This section will extract the argumentative structure using the trained models."
+        "This section will extract the argumentative structure using the trained models.\n",
+        "\n",
+        "You can copy the text to process into /content/argument-mining/data/to_process/$name"
       ]
     },
     {
@@ -275,7 +283,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IFcV8KnDkNTu",
-        "outputId": "b789d41d-d457-4669-c7c2-a69e46c09a43"
+        "outputId": "12b84145-53de-4dcd-c84e-d33ec6970a03"
       },
       "outputs": [],
       "source": [
@@ -300,7 +308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "A5OrxOYxpQ4X"
       },
@@ -922,7 +930,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7Ub9nE9U3XW6",
-        "outputId": "26256fd6-490a-46c0-8b51-ba28cf8db274"
+        "outputId": "24a47b63-0df7-44e7-da65-51e5b8897b3c"
       },
       "outputs": [],
       "source": [
@@ -941,10 +949,11 @@
           "height": 861
         },
         "id": "Ds_PTHqBrbBL",
-        "outputId": "000a7dba-8150-46a3-fb03-b1b478487fc0"
+        "outputId": "b905102e-3729-4287-e23c-1ccfafd62d10"
       },
       "outputs": [],
       "source": [
+        "\n",
         "import networkx as nx\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -1006,6 +1015,78 @@
         "  plt.axis(\"off\")\n",
         "  plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RxrMO_H4J4Wa"
+      },
+      "source": [
+        "# Export models and files processed\n",
+        "\n",
+        "This section will create zip files with the contet you wish to export. Once created you can download the files."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {
+        "id": "lC4gBhZ2JzGg"
+      },
+      "outputs": [],
+      "source": [
+        "#@title Export options: { display-mode: \"form\" }\n",
+        "\n",
+        "#@markdown ## Export options\n",
+        "#@markdown ---\n",
+        "\n",
+        "#@markdown Segmenter path\n",
+        "export_segmenter = True #@param {type: \"boolean\"}\n",
+        "export_link_predictor = True #@param {type: \"boolean\"}\n",
+        "export_processed_files = True #@param {type: \"boolean\"}\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4_p6mNIuLohS",
+        "outputId": "b481d63f-cf86-4675-9ab2-de5d203e5085"
+      },
+      "outputs": [],
+      "source": [
+        "segmenter_target = Path(f\"/content/argument-mining/data/segmenter_corpus/\")\n",
+        "link_prediction_target = Path(f\"/content/argument-mining/data/link_prediction/\")\n",
+        "processed_data_target = Path(\"argument-mining\") / processed_data_path\n",
+        "\n",
+        "processed_data_path_str = str(processed_data_target.resolve())\n",
+        "segmenter_to_save_path_str = str(segmenter_target.resolve())\n",
+        "link_predictor_to_save_path_str = str(link_prediction_target.resolve())\n",
+        "\n",
+        "processed_name = processed_data_path.name\n",
+        "segmenter_name = segmenter_to_save_path.name\n",
+        "link_predictor_name = link_predictor_to_save_path.name\n",
+        "\n",
+        "if export_segmenter:\n",
+        "  !zip -r \"$segmenter_name segmenter.zip\" $segmenter_to_save_path_str\n",
+        "if export_link_predictor:\n",
+        "  !zip -r \"$link_predictor_name link predictor.zip\" $link_predictor_to_save_path_str\n",
+        "if export_processed_files:\n",
+        "  !zip -r \"$processed_name data.zip\" $processed_data_path_str\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "VnPHv94ERGVG"
+      },
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -1016,22 +1097,18 @@
         "WaeY02zD1qdM",
         "FoDbJK_x2Swl",
         "8Y4r8ZTo27ba",
-        "Hh7bijWE3SMF"
+        "Hh7bijWE3SMF",
+        "RxrMO_H4J4Wa"
       ],
-      "provenance": [],
-      "toc_visible": true
+      "provenance": []
     },
     "gpuClass": "standard",
-    "interpreter": {
-      "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-    },
     "kernelspec": {
-      "display_name": "Python 3.6.9 64-bit",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
-      "name": "python",
-      "version": ""
+      "name": "python"
     }
   },
   "nbformat": 4,
