--- a/segmenter/models/segmenter.ipynb
+++ b/segmenter/models/segmenter.ipynb
@@ -1704,9 +1704,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_pipeline(params: dict, create_corpus: bool = True):\n",
-    "    if create_corpus:\n",
-    "        create_segmenter_corpus(params)\n",
+    "def train_pipeline(params: dict, create_corpus: bool = False):\n",
+    "    create_segmenter_corpus(params, create_corpus)\n",
     "    add_datasets(params)\n",
     "    add_embeddings(params)\n",
     "    create_model(params)\n",
