Colab ArgumentMining updated

--- a/ArgumentMiningColab.ipynb
+++ b/ArgumentMiningColab.ipynb
@@ -26,11 +26,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Mao_0C_WPWHi",
-        "outputId": "d360c44d-983d-4cc4-a912-c44e92d231e7"
+        "id": "Mao_0C_WPWHi"
       },
       "outputs": [],
       "source": [
@@ -46,13 +42,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 47,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Ok68HQqzjlme",
-        "outputId": "db2713d4-f9bd-4a90-d552-eb8e5d32ccc8"
+        "id": "Ok68HQqzjlme"
       },
       "outputs": [],
       "source": [
@@ -75,7 +67,9 @@
         "id": "wy8Zz3vA5sP8"
       },
       "source": [
-        "# Configuration\n"
+        "# Configuration\n",
+        "\n",
+        "This section define the projection and training parameters."
       ]
     },
     {
@@ -86,7 +80,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "65wHhxUn56nm",
-        "outputId": "eb394a6b-ac66-4fd2-c2a4-0536ed451124"
+        "outputId": "dfa3a30f-1662-4842-aae1-e0e1655810b7"
       },
       "outputs": [],
       "source": [
@@ -112,7 +106,7 @@
         "#@markdown ---\n",
         "\n",
         "#@markdown This tag must exist in argument-mining/data/corpus/ with train, test and dev subfolders.\n",
-        "corpus = \"persuasive_essays_paragraph_all_linked\" #@param [\"abstrct\", \"cdcp\", \"persuasive_essays_paragraph\", \"persuassive_essays_paragraph_all_linked\"] {allow-input: true}\n",
+        "corpus = \"cdcp\" #@param [\"cdcp\", \"abstrct\", \"persuasive_essays_paragraph\", \"persuassive_essays_paragraph_all_linked\"] {allow-input: true}\n",
         "\n",
         "#@markdown ## Set the process tag.\n",
         "#@markdown ---\n",
@@ -139,6 +133,8 @@
         "link_predictor_to_save_path = \"/content/link_prediction\" #@param {type:\"string\"}\n",
         "link_predictor_to_save_path = Path(link_predictor_to_save_path, corpus)\n",
         "\n",
+        "epochs = 100 #@param {type: \"integer\"}\n",
+        "\n",
         "if segmenter_saved_path.exists():\n",
         "  path = str(segmenter_saved_path)\n",
         "  target = Path(f\"/content/argument-mining/data/segmenter_corpus/\")\n",
@@ -146,6 +142,8 @@
         "  target_path = str(target)\n",
         "  !cp -r \"$path/\" \"$target_path\"\n",
         "  print(\"Model segmenter copied.\")\n",
+        "else:\n",
+        "  print(\"Model segmenter NOT copied.\")\n",
         "\n",
         "if link_predictor_saved_path.exists():\n",
         "  path = str(link_predictor_saved_path)\n",
@@ -153,7 +151,9 @@
         "  target.mkdir(parents=True, exist_ok=True)\n",
         "  target_path = str(target)\n",
         "  !cp -r \"$path/\" \"$target_path\"\n",
-        "  print(\"Model link predictor copied.\")"
+        "  print(\"Model link predictor copied.\")\n",
+        "else:\n",
+        "  print(\"Model link predictor NOT copied.\")\n"
       ]
     },
     {
@@ -216,37 +216,29 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MxBWtKacqmu9",
-        "outputId": "9f2065a0-8b89-4ceb-cd34-5cee60b4e03c"
+        "id": "MxBWtKacqmu9"
       },
       "outputs": [],
       "source": [
         "# Training segmenter\n",
-        "!cd argument-mining/scripts && ./train_segmenter.sh $corpus $target_language --epochs 1"
+        "!cd argument-mining/scripts && ./train_segmenter.sh $corpus $target_language --epochs $epochs"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Vo9dIU3gfxTb",
-        "outputId": "0f103920-d78a-4b49-c8f8-470c438c5b24"
+        "id": "Vo9dIU3gfxTb"
       },
       "outputs": [],
       "source": [
         "# Training link projection\n",
-        "!cd argument-mining/scripts && ./train_link_predictor.sh $corpus $target_language --epochs 1"
+        "!cd argument-mining/scripts && ./train_link_predictor.sh $corpus $target_language --epochs $epochs"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 51,
       "metadata": {
         "id": "kFAb8PW_TbZp"
       },
@@ -283,7 +275,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IFcV8KnDkNTu",
-        "outputId": "12b84145-53de-4dcd-c84e-d33ec6970a03"
+        "outputId": "d8ac276a-8110-48ab-b4a1-f8de30662542"
       },
       "outputs": [],
       "source": [
@@ -308,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "A5OrxOYxpQ4X"
       },
@@ -926,11 +918,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7Ub9nE9U3XW6",
-        "outputId": "24a47b63-0df7-44e7-da65-51e5b8897b3c"
+        "id": "7Ub9nE9U3XW6"
       },
       "outputs": [],
       "source": [
@@ -944,12 +932,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 861
-        },
-        "id": "Ds_PTHqBrbBL",
-        "outputId": "b905102e-3729-4287-e23c-1ccfafd62d10"
+        "id": "Ds_PTHqBrbBL"
       },
       "outputs": [],
       "source": [
@@ -1024,12 +1007,12 @@
       "source": [
         "# Export models and files processed\n",
         "\n",
-        "This section will create zip files with the contet you wish to export. Once created you can download the files."
+        "This section will create zip files with the content you wish to export. Once created you can download the files. This files can be uploaded to the streamlit app."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "lC4gBhZ2JzGg"
       },
@@ -1044,61 +1027,40 @@
         "export_segmenter = True #@param {type: \"boolean\"}\n",
         "export_link_predictor = True #@param {type: \"boolean\"}\n",
         "export_processed_files = True #@param {type: \"boolean\"}\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4_p6mNIuLohS",
-        "outputId": "b481d63f-cf86-4675-9ab2-de5d203e5085"
-      },
-      "outputs": [],
-      "source": [
-        "segmenter_target = Path(f\"/content/argument-mining/data/segmenter_corpus/\")\n",
-        "link_prediction_target = Path(f\"/content/argument-mining/data/link_prediction/\")\n",
-        "processed_data_target = Path(\"argument-mining\") / processed_data_path\n",
         "\n",
-        "processed_data_path_str = str(processed_data_target.resolve())\n",
-        "segmenter_to_save_path_str = str(segmenter_target.resolve())\n",
-        "link_predictor_to_save_path_str = str(link_prediction_target.resolve())\n",
-        "\n",
-        "processed_name = processed_data_path.name\n",
-        "segmenter_name = segmenter_to_save_path.name\n",
-        "link_predictor_name = link_predictor_to_save_path.name\n",
+        "base = Path(\"/content/argument-mining/data/\")\n",
         "\n",
         "if export_segmenter:\n",
-        "  !zip -r \"$segmenter_name segmenter.zip\" $segmenter_to_save_path_str\n",
+        "  segmenter_target = Path(base, \"segmenter_corpus/\", corpus)\n",
+        "  base_segmenter_str = str(base / \"segmenter_corpus\")\n",
+        "  segmenter_to_save_path_str = str(segmenter_target.relative_to(base, \"segmenter_corpus\"))\n",
+        "  segmenter_name = segmenter_to_save_path.name\n",
+        "  !cd $base_segmenter_str && zip -r \"$segmenter_name segmenter.zip\" $segmenter_to_save_path_str\n",
+        "  !mv \"$base_segmenter_str/$segmenter_name segmenter.zip\" \"$segmenter_name segmenter.zip\" \n",
         "if export_link_predictor:\n",
-        "  !zip -r \"$link_predictor_name link predictor.zip\" $link_predictor_to_save_path_str\n",
+        "  link_prediction_target = Path(base, \"link_prediction/\", corpus)\n",
+        "  base_link_predictor_str = str(base / \"link_prediction\")\n",
+        "  link_predictor_to_save_path_str = str(link_prediction_target.relative_to(base, \"link_prediction\"))\n",
+        "  link_predictor_name = link_predictor_to_save_path.name\n",
+        "  !cd $base_link_predictor_str && zip -r \"$link_predictor_name link predictor.zip\" $link_predictor_to_save_path_str\n",
+        "  !mv \"$base_link_predictor_str/$link_predictor_name link predictor.zip\" \"$link_predictor_name link predictor.zip\" \n",
         "if export_processed_files:\n",
-        "  !zip -r \"$processed_name data.zip\" $processed_data_path_str\n"
+        "  processed_target = Path(base, \"link_prediction_processed/\", corpus, process)\n",
+        "  base_processed_str = str(base / \"link_prediction_processed\" / corpus)\n",
+        "  processed_to_save_path_str = str(processed_target.relative_to(base / \"link_prediction_processed\" / corpus))\n",
+        "  processed_name = process\n",
+        "  !cd $base_processed_str && zip -r \"$processed_name processed.zip\" $processed_to_save_path_str\n",
+        "  !mv \"$base_processed_str/$processed_name processed.zip\" \"$processed_name processed.zip\" "
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "VnPHv94ERGVG"
-      },
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
     "colab": {
       "collapsed_sections": [
         "QBjBKCWt07YX",
-        "wy8Zz3vA5sP8",
         "WaeY02zD1qdM",
-        "FoDbJK_x2Swl",
         "8Y4r8ZTo27ba",
-        "Hh7bijWE3SMF",
-        "RxrMO_H4J4Wa"
+        "Hh7bijWE3SMF"
       ],
       "provenance": []
     },
